[tool.poetry]
name = "cancer-detection"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
streamlit = ">=1.2.0"
tensorflow = "2.8.0"

[tool.poetry.dev-dependencies]
black = "*"  # Pretty formatting of Python code
pynvim = "*" # Allows nvim users to use black formatting

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
secondary = false

